--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/material": "^5.10.7",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "@types/react-swipeable-views": "^0.13.1",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
