--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "^6.1.2",
     "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
