--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-swipeable-views": "^0.13.1",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "eslint-plugin-formatjs": "^4.3.1",
     "typescript": "4.8.3"
   }
 }
