--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
+    "@formatjs/cli": "^5.1.0",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
