--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "react",
     "mahjong",
-    "next-js"
+    "vite"
   ],
   "version": "0.1.0",
   "private": true,
@@ -15,10 +15,8 @@
     "email": "supersduby@gmail.com"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "extract": "formatjs extract",
     "compile": "formatjs compile"
   },
@@ -28,7 +26,6 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "material-ui-toggle-icon": "^1.1.2",
-    "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intl": "^6.1.2",
@@ -40,9 +37,16 @@
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-swipeable-views": "^0.13.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
     "eslint-plugin-formatjs": "^4.3.1",
-    "typescript": "4.8.3"
+    "eslint-plugin-react": "^7.31.8",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "react-router-dom": "^6.4.1",
+    "sort-by": "^1.2.0",
+    "typescript": "4.8.3",
+    "vite": "^3.1.4"
   }
 }
