--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^6.4.1",
     "sort-by": "^1.2.0",
     "typescript": "4.8.3",
-    "vite": "^3.1.4"
+    "vite": "^3.1.4",
+    "vite-plugin-static-copy": "^0.9.0"
   }
 }
